workloads/overlays/dev/resume/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: resume
  annotations:
    argocd.argoproj.io/sync-wave: "-10"
