workloads/overlays/dev/resume/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: resume
  namespace: resume
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  type: ClusterIP
  selector:
    app: resume
  ports:
    - port: 80
      targetPort: 80
